--- a/src/stylesheet/BreakLabel.css
+++ b/src/stylesheet/BreakLabel.css
@@ -5,6 +5,7 @@
   border-radius: 20px;
   margin: 5px;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
