--- a/src/stylesheet/SessionLabel.css
+++ b/src/stylesheet/SessionLabel.css
@@ -5,6 +5,21 @@
   border-radius: 20px;
   margin: 5px;
   display: flex;
+  flex-wrap: nowrap;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+.session-label-title{
+  font-size: 1.4em;
+
+}
+.session-label-controls{
+  margin: 10px;
+  width: 100%;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.3em;
 }
