--- a/src/stylesheet/BreakLabel.css
+++ b/src/stylesheet/BreakLabel.css
@@ -1,11 +1,25 @@
 .break-label{
   background-color: blueviolet;
   width: 240px;
-  height: 240px;
+  height: 190px;
   border-radius: 20px;
   margin: 5px;
   display: flex;
+  flex-wrap: nowrap;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+.break-label-title{
+  font-size: 1.4em;
+
+}
+.break-label-controls{
+  margin: 10px;
+  width: 100%;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 2em;
 }
