--- a/src/stylesheet/ClockDisplay.css
+++ b/src/stylesheet/ClockDisplay.css
@@ -1,5 +1,5 @@
 .display-container{
-  background-color: blue;
+  background-color: blueviolet;
   width: 490px;
   height: 300px;
   margin: 5px;
@@ -8,4 +8,5 @@
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
+  font-size: 2em;
 }
